Update waitress version for security patch

--- a/versions.cfg
+++ b/versions.cfg
@@ -63,3 +63,7 @@ plone.formwidget.geolocation = 2.2.1
 # collective.sendinblue==2.0
 Sendinblue = 2.0.5.1
 plone.formwidget.recaptcha = 2.2.0
+
+
+## override from https://dist.plone.org/release/5.2.1/versions.cfg
+waitress = 1.4.3
